## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

boxi_includedir = $(pkgincludedir)

boxi_include_DATA = \
	main.h\
	Location.h\
	BackupLocationsPanel.h\
	ClientConfig.h\
	ClientInfoPanel.h\
	Property.h\
	ServerConnection.h\
	StaticImage.h\
	BackupDaemonPanel.h\
	ClientConnection.h\
	ComparePanel.h\
	ParamPanel.h\
	BackupPanel.h\
	BackupProgressPanel.h\
	GeneralPanel.h\
	SetupWizard.h\
	SslConfig.h\
	FunctionPanel.h\
	SandBox.h\
	RestorePanel.h\
	RestoreFilesPanel.h\
	FileTree.h\
	MainFrame.h\
	TestFrame.h\
	WxGuiTestHelper.h

EXTRA_DIST = $(boxi_include_DATA)
